--- a/rules.routing.yml
+++ b/rules.routing.yml
@@ -49,6 +49,22 @@ entity.rules_reaction_rule.delete_form:
   requirements:
     _permission: 'administer rules+administer rules reactions'
 
+entity.rules_reaction_rule.enable:
+  path: '/admin/config/workflow/rules/reactions/enable/{rules_reaction_rule}'
+  defaults:
+    _controller: '\Drupal\rules\Controller\RulesReactionController::performReactionRuleOperation'
+    op: 'enable'
+  requirements:
+    _permission: 'administer rules+administer rules reactions'
+
+entity.rules_reaction_rule.disable:
+  path: '/admin/config/workflow/rules/reactions/disable/{rules_reaction_rule}'
+  defaults:
+    _controller: '\Drupal\rules\Controller\RulesReactionController::performReactionRuleOperation'
+    op: 'disable'
+  requirements:
+    _permission: 'administer rules+administer rules reactions'
+
 ### Rules Components
 entity.rules_component.collection:
   path: '/admin/config/workflow/rules/components'
